--- a/PopcornApp/app/src/main/res/layout/activity_scout_goal.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_scout_goal.xml
@@ -109,4 +109,54 @@
         android:minHeight="50dp"
         android:progress="50" />
 
+    <GridLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="25dp">
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_span="2"
+                android:gravity="center"
+                android:text="Set Scout Goal"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/TextColor" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:weightSum="1">
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".3" />
+
+            <EditText
+                android:id="@+id/SetGoalEditText"
+                style="@style/EditTextCubScoutTheme"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:layout_weight=".5"
+                android:ems="5"
+                android:inputType="number" />
+
+            <Button
+                android:id="@+id/SetGoalBtn"
+                style="@style/ButtonCubScoutTheme"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:text="Set Goal" />
+        </TableRow>
+    </GridLayout>
+
 </TableLayout>
